refactor: replace StandardCharsets.UTF_8 with string literal
The change simplifies the code by using a string literal instead of importing StandardCharsets for UTF-8 encoding, which is more concise while maintaining the same functionality.