@@ -28,7 +28,6 @@ import mindustry.game.EventType;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.Arrays;
 import java.util.List;
@@ -170,7 +169,7 @@ public class MindustryToolPluginLoader extends Plugin {
         CompletableFuture<String> result = new CompletableFuture<>();
 
         Http.get("https://api.mindustry-tool.com/api/v3/plugins/version?path=" + URLEncoder.encode(url,
-                StandardCharsets.UTF_8))
+                "UTF-8"))
                 .error(error -> {
                     result.completeExceptionally(error);
                     Log.err(error);
@@ -187,7 +186,7 @@ public class MindustryToolPluginLoader extends Plugin {
         CompletableFuture<HttpResponse> result = new CompletableFuture<>();
 
         Http.get("https://api.mindustry-tool.com/api/v3/plugins/download?path="
-                + URLEncoder.encode(url, StandardCharsets.UTF_8))
+                + URLEncoder.encode(url, "UTF-8"))
                 .timeout(60 * 1000)
                 .error(error -> {
                     result.completeExceptionally(error);
